@@ -1,5 +1,10 @@
 2005-10-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/enclosing-bracket.cc (struct Enclosing_bracket): new file.
+
+	* Documentation/user/instrument-notation.itely (Figured bass):
+	demonstrate extenders, update seealso links.
+
 	* scm/titling.scm (marked-up-headfoot): change tagline
 	handling. tagline = ##f will blank the tagline as well.
 
